@@ -1,4 +1,4 @@
-.TH SMP_CONF_GENERAL "8" "January 2008" "smp_utils\-0.93" SMP_UTILS
+.TH SMP_CONF_GENERAL "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_conf_general \- invoke CONFIGURE GENERAL SMP function
 .SH SYNOPSIS
@@ -75,13 +75,13 @@ increase the verbosity of the output. Can be used multiple times
 \fB\-V\fR, \fB\-\-version\fR
 print the version string and then exit.
 .SH CONFORMING TO
-The SMP CONFIGURE GENERAL function was introduced in SAS-2 .
+The SMP CONFIGURE GENERAL function was introduced in SAS\-2 .
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2008 Douglas Gilbert
+Copyright \(co 2006\-2011 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
