@@ -1,4 +1,4 @@
-.TH SMP_DISCOVER_LIST "8" "January 2008" "smp_utils\-0.93" SMP_UTILS
+.TH SMP_DISCOVER_LIST "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_discover_list \- invoke DISCOVER LIST SMP function
 .SH SYNOPSIS
@@ -124,13 +124,13 @@ the t13.org term):
 .PP
   phy  11:T:attached:[500605b000000afb:00  t(SATA)]  1.5 Gbps
 .SH CONFORMING TO
-The SMP DISCOVER LIST function was introduced in SAS-2 .
+The SMP DISCOVER LIST function was introduced in SAS\-2 .
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2008 Douglas Gilbert
+Copyright \(co 2006\-2011 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
