@@ -1,4 +1,4 @@
-.TH SMP_PHY_CONTROL "8" "January 2009" "smp_utils\-0.95" SMP_UTILS
+.TH SMP_PHY_CONTROL "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_phy_control \- invoke PHY CONTROL SMP function
 .SH SYNOPSIS
@@ -105,7 +105,7 @@ print the version string and then exit.
 .SH EXAMPLES
 See "Examples" section in http://sg.danny.cz/sg/smp_utils.html
 .SH CONFORMING TO
-The SMP PHY CONTROL function was introduced in SAS-1 .
+The SMP PHY CONTROL function was introduced in SAS\-1 .
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
