@@ -1,4 +1,4 @@
-.TH SMP_REP_PHY_SATA "8" "January 2009" "smp_utils\-0.95" SMP_UTILS
+.TH SMP_REP_PHY_SATA "8" "March 2011" "smp_utils\-0.96" SMP_UTILS
 .SH NAME
 smp_rep_phy_sata \- invoke REPORT PHY SATA SMP function
 .SH SYNOPSIS
@@ -53,15 +53,15 @@ print the version string and then exit.
 .SH EXAMPLES
 See "Examples" section in http://sg.danny.cz/sg/smp_utils.html
 .SH CONFORMING TO
-The SMP REPORT PHY SATA function was introduced in SAS-1 .
+The SMP REPORT PHY SATA function was introduced in SAS\-1 .
 The "Expander change count", "STP I_T nexus loss occurred" and several other
-fields were added in SAS-2 .
+fields were added in SAS\-2 .
 .SH AUTHORS
 Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2009 Douglas Gilbert
+Copyright \(co 2006\-2011 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
